Fix clients urls

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-HTTP_BASE_URI=http://localhost:6000
+FACEBOOK_API_URL=http://localhost:6002
+TWITTER_API_URL=http://localhost:6003
+INSTAGRAM_API_URL=http://localhost:6004
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
